--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script src="./calculator.js"  defer></script>
+    <script src="./calc.js"  defer></script>
     <title>Calculator</title>
 </head>
 <body>
@@ -16,9 +16,9 @@
         <div class="container">
         <div class="c operations">
             <button class="clear">clear</button>
-            <button class="root">&#8730;</button>
-            <button class="square" >x<sup>2</sup></button>
             <button class="mod">%</button>
+            <!--<button class="root">&#8730;</button>
+            <button class="square" >x<sup>2</sup></button>-->
             
 
         </div>
